# complizen-case-project

./: docker-compose.yaml  gradio_dashboard.py  main.py  migration.py  pyproject.toml  run_all_flows.sh
.gradio/flagged/: dataset1.csv  dataset2.csv
data/minio/.minio.sys/: format.json
data/postgresql/pgdata/: postgresql.conf  postmaster.opts
data/postgresql/pgdata/global/: 1213_vm  1260  1260_fsm  1260_vm  1261  1261_vm  1262  1262_fsm  1262_vm  2396  2396_vm  2397  2671  2672  2694  2695  6302  6303  pg_control  pg_internal.init
data/postgresql/pgdata/pg_stat/: pgstat.stat
data/postgresql/pgdata/pg_wal/: 00000001000000000000005A  00000001000000000000005B  00000001000000000000005C  00000001000000000000005D  00000001000000000000005E  00000001000000000000005F  00000001000000000000006A  00000001000000000000006B  00000001000000000000006C  00000001000000000000006D  00000001000000000000006E  00000001000000000000006F  00000001000000000000007A  00000001000000000000007B  00000001000000000000007C  00000001000000000000007D  00000001000000000000007E  00000001000000000000007F
data/postgresql/pgdata/pg_xact/: 0000
data/redis/: dump.rdb
data/redis/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
jupyter/: graph_visualizer.ipynb  pmnlstmn.txt
jupyter/.ipynb_checkpoints/: data-checkpoint.ipynb  openfda510k-checkpoint.ipynb  summary_extractor-checkpoint.ipynb
src/complizen/fda_graph/api/: __init__.py
src/complizen/fda_graph/crawler/: __init__.py  base.py  db_510k.py  openfda.py
src/flows/: db_510k.py  openfda.py  summary_parser.py
(+1936 files in other folders)
